# APF-Paper-2-The-Structure-of-Admissible-Physics

./: APF_Reviewer_Walkthrough.ipynb  APF_Reviewer_Walkthrough_Paper2.ipynb  CITATION.cff  MANIFEST.custom  Paper_2_Foundational_Gauge_Program_Supplement_v1.0.tex  Paper_2_Structure_of_Admissible_Physics_Supplement_v5.1.tex  Paper_2_Structure_of_Admissible_Physics_Supplement_v5.3.tex  Paper_2_Structure_of_Admissible_Physics_Supplement_v5.4.tex  Paper_2_Structure_of_Admissible_Physics_v5.3-PLEC.tex  Paper_2_Structure_of_Admissible_Physics_v7.1.tex  Paper_2_Structure_of_Admissible_Physics_v7.2.tex  Paper_2_Structure_of_Admissible_Physics_v7.3.tex  README.md  README_paper2.md  REVIEWERS_GUIDE.md  START_HERE.md  apf_storyboard.jsx  bank.py  derivation_graph.json  fermion_scan_standalone.py  gauge.py  pyproject.toml  repo_map.json  run_checks.py  theorems.json  verify_all.py  zenodo.json  zenodo_paper2.json
Old/: fermion_scan_standalone_v2_pre-A6-corrigendum_2026-07-13.py  zenodo.json.pre-relation-fix
ai_context/: AGENTS.md  ARGUMENT_FLOW.md  CITING.md  CLAIMS_LEDGER.md  DO_NOT_CLAIM.md  HOW_TO_VERIFY.md  LOCAL_VS_IMPORTED.md  PAPER_LINEAGE.md  STARTING_PROMPTS.md  THEOREMS.md  derivation_graph.json  repo_map.json  theorems.json
apf/: __init__.py  bank.py  core.py  ec_inventory_reading.py
archive/: APF_Paper2_Colab.ipynb  Paper_2_STRUCTURE_v7.tex  Paper_2_Structure_of_Admissible_Physics_Supplement_v2.tex  Paper_2_Structure_of_Admissible_Physics_Supplement_v5.2.tex  Paper_2_Structure_of_Admissible_Physics_v7.0.tex  README.md  REVIEWERS_GUIDE_v1_handcrafted.md
archive/apf_v1_handcrafted/: core.py
artifacts/: 61_channels_v5.html
docs/: apf_storyboard.jsx  index.html  storyboard.html
release_audit/: certificate.sha256  chirality_audit.csv  filter_waterfall.csv  kill_index.csv  near_misses.csv  scan_inputs.json  scan_outputs.csv
