[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apf-paper2"
version = "7.0"
description = "Structure of Admissible Physics — executable mathematical appendix"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
  {name = "Ethan Brooke", email = "brooke.ethan@gmail.com"}
]
keywords = ["gauge theory", "Standard Model", "non-closure", "fermion content", "cosmological constant", "weak mixing angle", "Cabibbo angle", "admissibility"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []  # standard library only

[project.urls]
Homepage = "https://github.com/Ethan-Brooke/APF-Paper-2-The-Structure-of-Admissible-Physics"
"Bug Tracker" = "https://github.com/Ethan-Brooke/APF-Paper-2-The-Structure-of-Admissible-Physics/issues"
"Zenodo" = "https://doi.org/10.5281/zenodo.18604839"

[tool.setuptools.packages.find]
include = ["apf*"]
